# Markdownizer

./: README.md  pyproject.toml
.github/workflows/: publish.yml
markdownizer/: __init__.py  __main__.py  classifier.py  cli.py  extractor.py  parser.py  renderer.py  scanner.py
